# -

Lections/Task1/: Arcanoid.txt  README.md
Project/: Readme.md
Project/doc/: backlog.xlsx  classes.pu  conceptual.pu  precedence.pu  КонечныйАвтомат.pu
Project/src/: Dockerfile  Script.txt  main.cpp
Project/src/shared/: CMakeLists.txt  SolAutic.cpp  camera.cpp  camera.h  cross-build.sh  event.cpp  event.h  exc  generator.cpp  generator.h  system.h
Project/src/shared/client/: CMakeLists.txt
Project/src/shared/client/src/: client.cpp  client.h  main.cpp
Project/src/shared/server/: CMakeLists.txt
Project/src/shared/server/src/: generator.cpp  generator.h
Project/src/shared/src/: CMakeLists.txt  SolAutic.cpp  cross-build.sh  main.cpp  system.cpp
Project/src/shared/src/src/: main.cpp  system.cpp  system.h
